# claude-sessions-dashboard

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  config.example.json  heartbeat.sh  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  ci.yml
code-review/output/: review-2026-02-23-0c9c47-v2.json  review-2026-02-23-0c9c47-v2.md  review-2026-02-23-0c9c47-v2.ndjson  review-2026-02-23-0c9c47-v2.run.json  review-2026-02-23-0c9c47-v3.json  review-2026-02-23-0c9c47-v3.md  review-2026-02-23-0c9c47-v3.ndjson  review-2026-02-23-0c9c47-v3.run.json  review-2026-02-23-0c9c47-v4.json  review-2026-02-23-0c9c47-v4.md  review-2026-02-23-0c9c47-v4.ndjson  review-2026-02-23-0c9c47-v4.run.json  review-2026-02-23-0c9c47-v5.json  review-2026-02-23-0c9c47-v5.md  review-2026-02-23-0c9c47-v5.ndjson  review-2026-02-23-0c9c47-v5.run.json  review-2026-02-23-0c9c47.json  review-2026-02-23-0c9c47.md  review-2026-02-23-0c9c47.ndjson  review-2026-02-23-0c9c47.run.json  review-2026-02-25-31880e.json  review-2026-02-25-31880e.md  review-2026-02-25-31880e.ndjson  review-2026-02-25-31880e.run.json  review-2026-02-25-78729e.json  review-2026-02-25-78729e.md  (+29 more)
docs/: ROADMAP-HISTORY.md
lib/: __init__.py  export.py  jsonl_reader.py  models.py  notify.py  search.py  store.py  validation.py
scripts/: cleanup_exports.py
tests/: conftest.py  test_cli.py  test_export.py  test_jsonl_reader.py  test_models.py  test_notify.py  test_search.py  test_store.py  test_validation.py  test_web.py
web/: app.py  index.html
(+40 files in other folders)
